2008-11-11  Xavier Queralt Mateu  <xqueralt at flumotion dot com>

	reviewed by: Arek Korbik <arek@flumotion.com>
	reviewed by: Johan Dahlin  <johan@flumotion.com>

	After this update the wizard's scenarios are fetched and loaded
	dynamically from the manager as bundles and we reuse more code among
	all the wizard modules.

	* flumotion/admin/gtk/addformatassistant.py (deleted):
	Cleaning code. This is not needed as right now ConfigurationAssistant
	can act as an AddFormatAssistant.
	* flumotion/scenario (added):
	* flumotion/scenario/__init__.py (added):
	* flumotion/scenario/Makefile.am (added):
	Created a new module where the scenario bundles will be placed.
	* flumotion/scenario/live (added):
	* flumotion/scenario/live/__init__.py (added):
	* flumotion/scenario/live/Makefile.am (added):
	* flumotion/scenario/live/live.xml (added):
	* flumotion/scenario/live/wizard_gtk.py (added):
	Created the Live scenario's module. This module contains the registry
	file (live.xml) and the scenario's logic (wizard_gtk.py).
	* flumotion/scenario/ondemand (added):
	* flumotion/scenario/ondemand/__init__.py (added):
	* flumotion/scenario/ondemand/Makefile.am (added):
	* flumotion/scenario/ondemand/ondemand.xml (added):
	* flumotion/scenario/ondemand/wizard_gtk.py (added):
	Created the Ondemand scenario's module. This module contains the
	registry file (ondemand.xml) and the scenario's logic (wizard_gtk.py).
	* flumotion/admin/assistant/scenarios.py (deleted):
	Cleaning code. As by now the scenarios are bundled and have its own
	module this one is not needed anymore.
	* flumotion/scenario/steps (added):
	* flumotion/scenario/steps/__init__.py (added):
	* flumotion/scenario/steps/Makefile.am (added):
	Created a new module where the wizard steps will be placed.
	* flumotion/scenario/steps/steps.xml (added):
	Registry file for the steps bundle. The scenarios will depend on this.
	* flumotion/scenario/steps/summarysteps.py (added):
	* flumotion/scenario/steps/licensestep.py (added):