@@ -6,8 +6,7 @@ component_PYTHON =              \
         configurationwriter.py  \
         interfaces.py           \
         models.py               \
-        save.py			\
-        scenarios.py
+        save.py
 
 TAGS_FILES = $(component_PYTHON)
 
